Fix Coven color in some strings

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4122,11 +4122,11 @@
   "ImpartialImpmin": "Minimum Number of <#ff1919>Impostors</color> to Kill",
   "ImpartialCrewmin": "Minimum Number of <#8cffff>Crewmates</color> to Kill",
   "ImpartialNeutralmin": "Minimum Number of <#ffab1b>Neutrals</color> to Kill",
-  "ImpartialCovenmin": "Minimum Number of <#ffab1b>Coven</color> to Kill",
+  "ImpartialCovenmin": "Minimum Number of <#7b3fbb>Coven</color> to Kill",
   "ImpartialImpmax": "Maximum Number of <#ff1919>Impostors</color> to Kill",
   "ImpartialCrewmax": "Maximum Number of <#8cffff>Crewmates</color> to Kill",
   "ImpartialNeutralmax": "Maximum Number of <#ffab1b>Neutrals</color> to Kill",
-  "ImpartialCovenmax": "Maximum Number of <#ffab1b>Coven</color> to Kill",
+  "ImpartialCovenmax": "Maximum Number of <#7b3fbb>Coven</color> to Kill",
   "ImpartialCanWinWhenKillingMore": "Can Win Even When Killing More of a Team than the Maximum",
   "SoulHunter": "Soul Hunter",
   "SoulHunterInfo": "Hunt Souls To Win",
