--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2803,7 +2803,7 @@
   "JudgeCanTrialNeutralB": "Can trial <color=#ffab1b>Neutral</color> <color=#046300>Benign</color>",
   "JudgeCanTrialNeutralK": "Can trial <color=#ffab1b>Neutral</color> <color=#ff1919>Killing</color>",
   "JudgeCanTrialNeutralE": "Can trial <color=#ffab1b>Neutral</color> <color=#912900>Evil</color>",
-  "JudgeCanTrialCoven": "Can trial <color>=#7b3fbb>Coven</color>",
+  "JudgeCanTrialCoven": "Can trial <color=#7b3fbb>Coven</color>",
   "JudgeCanTrialSidekick": "Can trial <color=#00b4eb>Sidekick</color>",
   "JudgeCanTrialInfected": "Can trial <color=#7B8968>Infected</color>",
   "JudgeCanTrialContagious": "Can trial <color=#2E8B57>Contagious</color>",
