--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -889,13 +889,13 @@
   "DisableMeeting": "Disable Meetings",
   "DisableCloseDoor": "Disable Doors sabotage",
   "DisableSabotage": "Disable Sabotages",
-  "DisableReactorOnSkeldAndMira": "Disable Reactor Sabotage (The Skeld & MIRA HQ)",
-  "DisableReactorOnPolus": "Disable Reset Seismic Stabilizers Sabotage (Polus)",
-  "DisableReactorOnAirship": "Disable Avert Crash Course Sabotage (AirShip)",
-  "DisableO2": "Disable O2 Sabotage (The Skeld & MIRA HQ)",
+  "DisableReactorOnSkeldAndMira": "Disable Reactor Sabotage (<color=#66a186>The Skeld</color> & <color=#e84b56>MIRA HQ</color>)",
+  "DisableReactorOnPolus": "Disable Reset Seismic Stabilizers Sabotage (<color=#a167c0>Polus</color>)",
+  "DisableReactorOnAirship": "Disable Avert Crash Course Sabotage (<color=#ed0007>Airship</color>)",
+  "DisableO2": "Disable O2 Sabotage (<color=#66a186>The Skeld</color> & <color=#e84b56>MIRA HQ</color>)",
   "DisableComms": "Disable Comms Sabotage",
   "DisableLights": "Disable Lights Sabotage",
-  "DisableMushroomMixup": "Disable Mushroom Mixup Sabotage (The Fungle)",
+  "DisableMushroomMixup": "Disable Mushroom Mixup Sabotage (<color=#ffa646>Fungle</color>)",
   "ShowAntiBlackoutWarning": "Show Anti-Blackout Warning When the Ejection Screen is Overridden",
   "NoGameEnd": "No Game End",
   "AllowConsole": "Console",
@@ -903,11 +903,11 @@
   "SyncButtonMode": "Sync Buttons Mode",
   "RandomMapsMode": "Random Maps Mode",
   "SyncedButtonCount": "Max Number of Emergency Meetings Allowed",
-  "AddedTheSkeld": "Include The Skeld",
-  "AddedMIRAHQ": "Include MIRA HQ",
-  "AddedPolus": "Include Polus",
+  "AddedTheSkeld": "Include <color=#66a186>The Skeld</color>",
+  "AddedMIRAHQ": "Include <color=#e84b56>MIRA HQ</color>",
+  "AddedPolus": "Include <color=#a167c0>Polus</color>",
   "DontUpdateDeadPlayers": "Don't Update Dead Players to Improve Performance",
-  "AddedTheAirship": "Include Airship",
+  "AddedTheAirship": "Include <color=#ed0007>Airship</color>",
   "AllAliveMeeting": "Meeting When No One is Dead",
   "AllAliveMeetingTime": "Meeting Time When No One is Dead",
   "AdditionalEmergencyCooldown": "Additional Emergency Cooldown",
@@ -1121,9 +1121,9 @@
   "DisableDevices": "Disable Devices",
   "DisableSkeldDevices": "Disable Skeld Devices",
   "DisableMiraHQDevices": "Disable MiraHQ Devices",
-  "DisablePolusDevices": "Disable Polus Devices",
-  "DisableAirshipDevices": "Disable Airship Devices",
-  "DisableFungleDevices": "Disable Fungle Devices",
+  "DisablePolusDevices": "Disable <color=#a167c0>Polus</color> Devices",
+  "DisableAirshipDevices": "Disable <color=#ed0007>Airship</color> Devices",
+  "DisableFungleDevices": "Disable <color=#ffa646>Fungle</color> Devices",
   "DisableSkeldAdmin": "Disable Admin",
   "DisableMiraHQAdmin": "Disable Admin",
   "DisablePolusAdmin": "Disable Admin",
@@ -1144,14 +1144,14 @@
   "IgnoreAfterAnyoneDied": "Ignore After First Death",
   "LightsOutSpecialSettings": "Fix Lights Special Settings",
   "BlockDisturbancesToSwitches": "Block Switches When They Are Up",
-  "DisableAirshipViewingDeckLightsPanel": "Disable Viewing Deck Lights Panel (Airship)",
-  "DisableAirshipGapRoomLightsPanel": "Disable Gap Room Lights Panel (Airship)",
-  "DisableAirshipCargoLightsPanel": "Disable Cargo Lights Panel (Airship)",
+  "DisableAirshipViewingDeckLightsPanel": "Disable Viewing Deck Lights Panel (<color=#ed0007>Airship</color>)",
+  "DisableAirshipGapRoomLightsPanel": "Disable Gap Room Lights Panel (<color=#ed0007>Airship</color>)",
+  "DisableAirshipCargoLightsPanel": "Disable Cargo Lights Panel (<color=#ed0007>Airship</color>)",
   "KickNotJoinedPlayersRegularly": "Kick players who haven't joined the game every 25s in lobby",
   "RandomSpawn": "Random Spawns",
   "AirshipAdditionalSpawn": "Additional Spawn Locations (<color=#ed0007>Airship</color>)",
   "CommsCamouflage": "Camouflage during Comms Sabotage",
-  "CommsCamouflageDisableOnFungle": "Disable on Fungle",
+  "CommsCamouflageDisableOnFungle": "Disable on <color=#ffa646>Fungle</color>",
   "CommsCamouflageLimit": "Limit",
   "CommsCamouflageLimitSetChance": "Set Chance of Camouflaging (each time Comms are sabotaged)",
   "CommsCamouflageLimitChance": "Chance of Camouflaging",
@@ -1185,7 +1185,7 @@
   "DisableAllShapeshiftAnimations": "Disable All Shapeshift Animations",
   "CTA.PlayersCanWinWithOriginalTeam": "Custom Teamed Players Can Win With Their Original Team",
   "CTA.PlayersCanSeeEachOthersRoles": "Custom Teamed Players Can See Each Other's Roles",
-  "AirshipVariableElectrical": "Variable Electrical (Airship)",
+  "AirshipVariableElectrical": "Variable Electrical (<color=#ed0007>Airship</color>)",
   "ApplyDenyNameList": "Apply DenyName List",
   "KickPlayerFriendCodeNotExist": "Kick players who are not logged in",
   "ApplyBanList": "Apply BanList",
@@ -1374,7 +1374,7 @@
   "SabotageMasterFixesDoors": "Can open all doors in the same building",
   "SabotageMasterFixesReactors": "Can Fix Both Reactors Alone",
   "SabotageMasterFixesOxygens": "Can Fix Both O2 Alone",
-  "SabotageMasterFixesCommunications": "Can Fix Both Comms Alone In MIRA HQ",
+  "SabotageMasterFixesCommunications": "Can Fix Both Comms Alone In <color=#e84b56>MIRA HQ</color>",
   "SabotageMasterFixesElectrical": "Can Fix Lights With One Switch",
   "SMUsesUsedWhenFixingReactorOrO2": "Uses it takes to fix Reactor/O2",
   "SMUsesUsedWhenFixingLightsOrComms": "Uses it takes to fix Lights/Comms",
@@ -2017,14 +2017,14 @@
   "SabotageCooldownControl": "Modify Sabotage Cooldown",
   "SabotageCooldown": "Sabotage Cooldown",
   "SabotageTimeControl": "Modify Sabotage Time Limit",
-  "PolusReactorTimeLimit": "Reactor Time Limit on Polus",
-  "SkeldO2TimeLimit": "O2 Time Limit on The Skeld",
-  "SkeldReactorTimeLimit": "Reactor Time Limit on The Skeld",
-  "MiraO2TimeLimit": "O2 Time Limit on Mira HQ",
-  "MiraReactorTimeLimit": "Reactor Time Limit on Mira HQ",
+  "PolusReactorTimeLimit": "Reactor Time Limit on <color=#a167c0>Polus</color>",
+  "SkeldO2TimeLimit": "O2 Time Limit on <color=#66a186>The Skeld</color>",
+  "SkeldReactorTimeLimit": "Reactor Time Limit on <color=#66a186>The Skeld</color>",
+  "MiraO2TimeLimit": "O2 Time Limit on <color=#e84b56>MIRA HQ</color>",
+  "MiraReactorTimeLimit": "Reactor Time Limit on <color=#e84b56>MIRA HQ</color>",
   "FungleMushroomMixupDuration": "Mushroom Mixup Camouflage Duration",
-  "FungleReactorTimeLimit": "Reactor Time Limit on Fungle",
-  "AirshipReactorTimeLimit": "Reactor Time Limit on Airship",
+  "FungleReactorTimeLimit": "Reactor Time Limit on <color=#ffa646>The Fungle</color>",
+  "AirshipReactorTimeLimit": "Reactor Time Limit on <color=#ed0007>Airship</color>",
   "CamerasDisabledNotify": "<color=#ffff00>Cameras are globally disabled by the host</color>",
   "CommandList": "★ Command list:",
   "DisableSunnyboy": "Disable <color=#ff9902>Sunnyboy</color>",
@@ -3252,7 +3252,7 @@
   "MadmateCanFindMarshall": "Reveal to <#ff1919>MadMates</color>",
   "CovenCanFindMarshall": "Reveal to <#7b3fbb>Coven</color>",
   "MarshallCanBeGuessedOnTaskCompletion": "Can be Guessed on Task Completion",
-  "DoesntSpawnOnFungle": "Doesn't Spawn When the Map is <color=#ffa646>Fungle</color>",
+  "DoesntSpawnOnFungle": "Doesn't Spawn When the Map is <color=#ffa646>The Fungle</color>",
   "Blackmailer": "Blackmailer",
   "BlackmailerInfo": "Blackmail Players",
   "BlackmailerInfoLong": "(Impostors):\\nAs the Blackmailer, you can blackmail players by clicking your kill button once on them. Blackmailed players' votes will be forced to be the same as your vote. Double click to kill normally.",
@@ -4523,8 +4523,8 @@
   "MoveAndStop_MiddleCounterGreenMax": "Middle Counter Maximum Green Time",
   "MoveAndStop_MiddleCounterRedMin": "Middle Counter Minimum Red Time",
   "MoveAndStop_MiddleCounterRedMax": "Middle Counter Maximum Red Time",
-  "MoveAndStop_ExtraGreenTimeOnAirship": "Extra Green Time On AirShip",
-  "MoveAndStop_ExtraGreenTimeOnFungle": "Extra Green Time On Fungle",
+  "MoveAndStop_ExtraGreenTimeOnAirship": "Extra Green Time On <color=#ed0007>Airship</color>",
+  "MoveAndStop_ExtraGreenTimeOnFungle": "Extra Green Time On <color=#ffa646>Fungle</color>",
   "MoveAndStop_PlayerLives": "Player Lives",
   "MoveAndStop_EnableTutorial": "Enable Tutorial",
   "MoveAndStop_EventFrequency": "Frequency of Events",
