--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -51,6 +51,7 @@
   "ImpostorsCanGuess": "<color=#ff1919>Impostors</color> can guess",
   "NeutralKillersCanGuess": "<color=#ffab1b>Neutral Killers</color> can guess",
   "PassiveNeutralsCanGuess": "Passive <color=#ffab1b>Neutrals</color> can guess",
+  "CovenCanGuess": "<color=#7b3fbb>Coven members</color> can guess",
   "CanGuessAddons": "Can Guess Add-ons",
   "CrewCanGuessCrew": "<color=#8cffff>Crewmates</color> Can Guess <color=#8cffff>Crewmate</color> Roles",
   "ImpCanGuessImp": "<color=#ff1919>Impostors</color> Can Guess <color=#ff1919>Impostor</color> Roles",
@@ -724,7 +725,7 @@
   "LurkerInfoLong": "(Impostors):\\nAs the Lurker, you can jump into a vent to reduce your cooldown by a certain number of seconds. After you kill, your cooldown is reset to its original value.",
   "ConvictInfoLong": "(Madmates):\\nAs the Convict, you now work for the Impostors.",
   "VisionaryInfoLong": "(Impostors):\\nAs the Visionary, you see the teams of players you revealed. You can reveal a player's alignment by selecting them as your shapeshifting target; if you have at least one ability, use left. You gain one ability to use after each kill you make.\\nThe name color of a revealed player will indicate their team (<#8cffff>Crewmate</color>/<#ff1919>Impostor</color>/<#ffab1b>Neutral</color>/<#7b3fbb>Coven</color>).",
-  "RefugeeInfoLong": "(Madmates):\\nAs the Renegade, you were an Amnesiac who remembered an Impostor role. Help the Impostors kill the crewmates.",
+  "RefugeeInfoLong": "(Madmates):\\nAs the Renegade, help the Impostors win.",
   "UnderdogInfoLong": "(Impostors):\\nAs the Underdog, your kill cooldown is longer until there's a certain amount of players alive. After that, your cooldown is shorter.",
   "EvilDivinerInfoLong": "(Impostors):\\nAs the Consigliere, you can reveal the roles of other players using your kill button.\\n\\nSingle click: Reveal role\\nDouble click: Kill\\n\\nIf you run out of reveal uses, your kill button functions normally.",
   "LuckeyInfoLong": "(Crewmates):\\nThe Luckey has a probability of evading a player's kill attempt, set by the host. The killer sees a shield animation, but Luckey is unaware.",
@@ -5506,12 +5507,15 @@
   "PotionMaster.Suffix": "<{1}>Shielded</color> <#888888>-</color> <b>{0}</b>",
   "Poache": "Poache",
   "PoacheInfo": "Poison kills with delay or disables votes",
-  "PoacheInfoLong": "(Coven):\\nPoison a player, making them unable to vote in the next meeting. Players will not know they've been poisoned. Upon gaining the Necronomicon, poisoned players will die a few seconds (determined by the host) after attempting to poison someone.",
+  "PoacheInfoLong": "(Coven):\\nPoison a player, making them unable to vote in the next meeting. Players will not know they've been poisoned. Upon gaining the Necronomicon, poisoned players will die a few seconds (determined by the host's settings) after poisoning them.",
   "Poache.KillDelay": "Poison Kill Delay",
   "Reaper": "Reaper",
   "ReaperInfo": "Curse, collect souls, become Death",
-  "ReaperInfoLong": "(Coven):\\nCurse a player; when a cursed player dies, you gain a soul. Upon reaching a specific number of souls (set by the host), you become Death. Death cannot be killed normally and has a low kill cooldown, similar to Pestilence. You cannot have the Necronomicon enhance your powers.",
+  "ReaperInfoLong": "(Coven):\\nCurse a player; when a cursed player dies, you gain a soul. Upon reaching a specific number of souls (set by the host), you become Death. You cannot have the Necronomicon enhance your powers.",
   "Reaper.SoulsRequired": "Number of Souls required to transform into Death",
+  "Death": "Death",
+  "DeathInfo": "Kill with low cooldown",
+  "DeathInfoLong": "(Coven):\\You cannot be killed normally and you have a low kill cooldown, similar to Pestilence. You cannot have the Necronomicon enhance your powers.",
   "VoodooMaster": "Voodoo Master",
   "VoodooMasterInfo": "Redirect abilities, kill with Necronomicon",
   "VoodooMasterInfoLong": "(Coven):\\nForce someone to use their ability on themselves or generally (like Tornado or Camouflager). Upon gaining the Necronomicon, you will also kill the target.",
@@ -5533,7 +5537,7 @@
   "Banshee.Radius": "Screech Radius",
   "Illusionist": "Illusionist",
   "IllusionistInfo": "Morph players, kill sampled targets",
-  "IllusionistInfoLong": "(Coven):\\nSample a player, then select another player (using Shapeshift) to morph them into the sampled player. Upon gaining the Necronomicon, you gain the ability to kill the sampled player.",
+  "IllusionistInfoLong": "(Coven):\\nSample a player, then select another player (using Shapeshift) to morph them into the sampled player. Upon gaining the Necronomicon, you gain the ability to kill the sampled player (by double clicking with your kill button on them).",
   "Illusionist.ShapeshiftAnimation": "Show Shapeshift Animation",
   "Illusionist.UnmorphPrevious": "Unmorph previous target if a new one is chosen",
   "Timelord": "Timelord",
@@ -5542,7 +5546,7 @@
   "Timelord.TimeStolenWithEachKill": "Time stolen with each kill",
   "Enchanter": "Enchanter",
   "EnchanterInfo": "Alter investigations; kill with Necronomicon",
-  "EnchanterInfoLong": "(Coven):\\nEnchant a player, making them appear as a Coven member to crew investigators. When an enchanted player is killed, their death reason will be random. When enhanced by the Necronomicon, you gain the ability to kill.",
+  "EnchanterInfoLong": "(Coven):\\nEnchant a player, making them appear as a Coven member to crew investigators. When an enchanted player is killed, their death reason will be random. When enhanced by the Necronomicon, you gain the ability to kill (by double clicking with your kill button on someone).",
   "DCNotify.Hacking": "You were <color=#ff1919>banned</color> for hacking.\\n\\nPlease stop.",
   "DCNotify.Banned": "You were <color=#ff1919>banned</color> from this lobby.\\n\\nContact the host if this was a mistake.",
   "DCNotify.Kicked": "You were <color=#ffff00>kicked</color> from this lobby.\\n\\nYou may still rejoin.",
