--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3733,7 +3733,8 @@
   "EnigmaClueRole1": "The Killer is an Impostor!",
   "EnigmaClueRole2": "The Killer is a Neutral!",
   "EnigmaClueRole3": "The Killer is a Crewmate!",
-  "EnigmaClueRole4": "The Killer's Role is {0}!",
+  "EnigmaClueRole4": "The Killer is a Coven member!",
+  "EnigmaClueRole5": "The Killer's Role is {0}!",
   "EnigmaClueLevel1": "The Killer's Level is above 50!",
   "EnigmaClueLevel2": "The Killer's Level is below 50!",
   "EnigmaClueLevel3": "The Killer's Level is between {0} and {1}!",
