--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1794,6 +1794,7 @@
   "RookieKillRoundOne": "As a Rookie, you cannot kill in the first round",
   "SocialiteTarget": "The target of the Socialite cannot be killed\\nYou were added to their Guest List",
   "BodyguardProtected": "The Bodyguard protected your target and died for them",
+  "CovenKillEachOther": "As a Coven member, you cannot (and shouldn't) kill other Coven members",
   "SomeSortOfProtection": "This player is shielded due to a role-specific action",
   "HexButtonText": "Hex",
   "EscapeeAbilityButtonText": "TP",
@@ -5502,7 +5503,7 @@
   "CovenLeaderInfoLong": "(Coven):\\nYou will always spawn if the Coven is enabled. You are the only Coven member who can directly kill. You gain the Necronomicon first. When your powers are enhanced by the Necronomicon, your kill cooldown is halved, and you gain a long kill distance.",
   "SpellCaster": "Spellcaster",
   "SpellCasterInfo": "Hex all players to win",
-  "SpellCasterInfoLong": "(Coven):\\nConjure hexes on players; when all players are hexed, the Coven wins. Upon gaining the Necronomicon, you will spell (like the Witch) all targets that are or become hexed.",
+  "SpellCasterInfoLong": "(Coven):\\nConjure hexes on players; when all players are hexed, the Coven wins after the next meeting if any Spellcasters are still alive (other players will know about this). Upon gaining the Necronomicon, you will spell (like the Witch) all targets that are or become hexed.",
   "SpellCaster.WinConditionMet": "The Coven will win after this meeting if the {0} is still alive.",
   "SpellCaster.WinConditionMetTitle": "<#ffff00>⚠</color> The {0} has hexed all non-Coven players! <#ffff00>⚠</color>",
   "PotionMaster": "Potion Master",
