ehr = endless hotfixes repeatedly

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1077,6 +1077,7 @@
   "GameStateCommand.ShowTasks": "Show amount of completed tasks",
   "MinPlayersForGameStateCommand": "Minimum alive players to use this command",
   "EveryoneSeesDeathReasons": "Everyone Sees Death Reasons",
+  "EveryoneSeesDeadPlayersRoles": "Everyone Sees Dead Players' Roles",
   "HostSeesCommandsEnteredByOthers": "Host Sees Commands Entered By Others",
   "BlockVentMovement": "Block Movement Between Vents (while in a vent)",
   "DoorsResetMode": "Mode",
@@ -1931,6 +1932,7 @@
   "RomanticProtectCooldown": "Protect Cooldown",
   "RomanticBetPlayer": "You picked your partner",
   "RomanticBetOnYou": "The Romantic chose you as their Partner!",
+  "Romantic.PickPartnerText": "PICK PARTNER",
   "VengefulKCD": "<color=#ba2749>Vengeful Romantic</color> Kill Cooldown",
   "VengefulCanVent": "<color=#ba2749>Vengeful Romantic</color> Can Vent",
   "VengefulHasImpVision": "<color=#ba2749>Vengeful Romantic</color> Has <#ff1919>Impostor</color> Vision",
