rework time master + report fail notifies

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -778,7 +778,7 @@
   "SpiritualistInfoLong": "(Crewmates):\\nAs the Spiritualist, you will get an arrow pointing to the ghost of the body that was reported in the last meeting.\\n\\nIf the player was good, it may lead you to an Impostor or neutral killer.\\nIf the player was bad, it may just lead you to a fellow crewmate.",
   "ChameleonInfoLong": "(Crewmates):\\nAs the Chameleon, you can vent to disguise (invisible). While disguising, nobody can interact with you. Venting while disguised will reveal yourself.",
   "ParityCopInfoLong": "(Crewmates):\\nTo check if two players are on the same team, use the command /cp [player id 1] [player id 2]. Neutral killers are counted as part of the same team. Non-Killing Neutrals are counted as separate teams. The Trickster is counted as crew, and Madmates are counted as Impostor. The Lawyer/Follower and its target count as the same team. You will receive an affirmation message if they are in the same team or a denial message if they are not.",
-  "TimeMasterInfoLong": "(Crewmates):\\nAs the Time Master, use the vents/pet to mark everyone's position. When using the ability again, every alive player will be teleported back to the marked positions.\\n\\nDuring the ability duration, and the Time Master gains a time shield, which protects them from death.",
+  "TimeMasterInfoLong": "(Crewmates):\\nAs the Time Master, use the vents/pet to rewind time to a few seconds before. Players will be teleported back to their positions from that time. Players who died within that time will be revived.",
   "CrusaderInfoLong": "(Crewmates):\\nAs the Crusader, use your kill button to crusade a player. If that player gets attacked, you'll kill the attacker.",
   "ArsonistInfoLong": "(Neutrals):\\nArsonist can douse by clicking the kill button on a player and following them for a few seconds. When dousing starts, successful dousing is indicated by a shield animation (only visible to themselves). When the Arsonist douses all surviving players, they can vent/pet their pet to start a fire and win alone. If player name shows 「△」, they're being doused; if it shows 「▲」, they're completely doused.",
   "JesterInfoLong": "(Neutrals):\\nJester wins alone if voted out but loses if still alive at the end. Jester, Executioner, and Innocent can win together.",
@@ -1780,6 +1780,15 @@
   "AddictWarning": "<#ffff00>You must vent soon or you'll suicide!</color>",
   "DoppelgangerWarning": "<#ffff00>The Doppelganger swapped skins with you!</color>",
   "TriedToKillLastGameFirstKill": "Your target was the first to die in the last game.\\nLet them play!",
+  "CheckReportFail": "<#ff0000>This meeting call was canceled due to the following reason:\\n</color>",
+  "JesterCannotCallEmergencyMeeting": "As the <#ec62a5>Jester</color>, according to the host's settings, you cannot call emergency meetings",
+  "NiceSwapperCannotCallEmergencyMeeting": "As the <#922348>Nice Swapper</color>, according to the host's settings, you cannot call emergency meetings",
+  "AdrenalineCannotCallEmergencyMeeting": "As the <#ffff00>Adrenaline</color>, you cannot call emergency meetings currently",
+  "PlayerWasRevived": "The player whose body you tried to report was revived",
+  "HypnosisNoMeeting": "Everyone is in hypnosis, no meeting calls are allowed currently",
+  "TargetDisregarded": "The player whose body you tried to report is <#FF6347>Disregarded</color>",
+  "ShipHasNoMoreMeetingsLeft": "The ship has no more emergency meetings left",
+  "UnreportableBody": "This body is unreportable due to a role-specific action",
   "CheckMurderFail": "<#ff0000>The murder was canceled due to the following reason:\\n</color>",
   "SameCTATeam": "The player you attacked is in the same custom team as you",
   "AFKShielded": "According to the Host's settings, AFK players cannot be killed",
@@ -5071,6 +5080,8 @@
   "TimeMasterSkillStop": "Time Shield has ended!",
   "TimeMasterVentButtonText": "Time Shield",
   "TimeMasterMaxUses": "(Initial) Max Amount of Ability Uses",
+  "TimeMasterRewindStart": "The {0} is rewinding time!",
+  "RevivedByTimeMaster": "<size=150%><#ffff00>You were revived during the rewind!</color></size>",
   "UnderdogMaximumPlayersNeededToKill": "Maximum players needed for low cooldown",
   "UnderdogKillCooldownWithMorePlayersAlive": "Kill Cooldown when more players are alive",
   "UnluckyTaskSuicideChance": "Chance to suicide from doing tasks",
@@ -5509,7 +5520,7 @@
   "CovenLeaderInfoLong": "(Coven):\\nYou will always spawn if the Coven is enabled. You are the only Coven member who can directly kill. You gain the Necronomicon first. When your powers are enhanced by the Necronomicon, your kill cooldown is halved, and you gain a long kill distance.",
   "SpellCaster": "Spellcaster",
   "SpellCasterInfo": "Hex all players to win",
-  "SpellCasterInfoLong": "(Coven):\\nConjure hexes on players; when all players are hexed, the Coven wins after the next meeting if any Spellcasters are still alive (other players will know about this). Upon gaining the Necronomicon, you will spell (like the Witch) all targets that are or become hexed.",
+  "SpellCasterInfoLong": "(Coven):\\nConjure hexes on players; when all players are hexed, the Coven wins after the next meeting if any Spellcasters are still alive (other players will know about this; you appear as hexed if more than half of the alive players are hexed). Upon gaining the Necronomicon, you will spell (like the Witch) all targets that are or become hexed.",
   "SpellCaster.WinConditionMet": "The Coven will win after this meeting if the {0} is still alive.",
   "SpellCaster.WinConditionMetTitle": "<#ffff00>⚠</color> The {0} has hexed all non-Coven players! <#ffff00>⚠</color>",
   "PotionMaster": "Potion Master",
