--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -5554,6 +5554,10 @@
   "Dreamweaver": "Dreamweaver",
   "DreamweaverInfo": "Drive players insane with weaving",
   "DreamweaverInfoLong": "(Coven):\\nWeave a player; woven players will become insane after the next meeting. Once insane, when they go near someone, they will immediately use their ability if their cooldown is up. Upon your death, all insane players will be freed. When enhanced by the Necronomicon, insane players will suicide after making contact with another player.",
+  "Insane": "Insane",
+  "InsaneInfo": "You're insane",
+  "InsaneInfoLong": "(Add-ons):\\nInsane players were woven by the Dreamweaver. You are forced to use your ability on any player you touch as soon as your cooldown is up. If the Dreamweaver dies, you lose this add-on.",
+  "Prefix.Insane": "Insane",
   "Banshee": "Banshee",
   "BansheeInfo": "Deafen or kill with screech",
   "BansheeInfoLong": "(Coven):\\nScreech nearby players to deafen them (using the vanish button), making them unable to hear or see the chat during the next meeting. With the Necronomicon, your screech becomes lethal.",
