--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -5514,7 +5514,7 @@
   "DoYourTasksPlease": "Please do your tasks!",
   "OnlyShowPart": "Shown only part",
   "YouReceivedTheNecronomicon": "You have received the <{0}>Necronomicon</color>! This grants you the ability to kill normally, and other abilities based on your role.",
-  "PlayerReceivedTheNecronomicon": "<b>{0}</b> has received the <{1}>Necronomicon</color>!\\n<size=70%>Now, {2} Coven members have the Necronomicon.</size>",
+  "PlayerReceivedTheNecronomicon": "<b>{0}</b> has received the <{1}>Necronomicon</color>!\\n<size=70%>Now, {2} Coven members have the Necronomicon: {3}</size>",
   "CovenLeader": "Coven Leader",
   "CovenLeaderInfo": "Lead the Coven & Kill",
   "CovenLeaderInfoLong": "(Coven):\\nYou will always spawn if the Coven is enabled. You are the only Coven member who can directly kill. You gain the Necronomicon first. When your powers are enhanced by the Necronomicon, your kill cooldown is halved, and you gain a long kill distance.",
