fix + /gm command

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2381,6 +2381,7 @@
   "CommandDescription.Anagram": "Get a random scrambled word, then try to guess the original word.",
   "CommandDescription.RoleList": "View the limits of how many of each faction and subcategory of roles will spawn.",
   "CommandDescription.JailTalk": "Talk to the Jailor as a jailed player or vice versa.",
+  "CommandDescription.GameModeList": "View the list of all game modes in the mod.",
   "CommandArgs.ChangeSetting.Name": "The setting's name to change (leave blank to view all settings)",
   "CommandArgs.ChangeSetting.UnknownValue": "(leave blank to view what to put here)",
   "CommandArgs.Rename.Name": "Your new name",
@@ -4484,6 +4485,7 @@
   "Grappler": "Grappler",
   "GrapplerInfo": "Prevent kills and pull players towards you",
   "GrapplerInfoLong": "(Crewmates):\\nAs the Grappler, you can prevent 1 kill in each round if you have an ability use left at the end of the last round. The first kill attempt will be blocked and the target will be teleported to you and not die. Your ability doesn't work during sabotages.",
+  "GameModeListTitle": "Game Modes",
   "ModeStandard": "Gamemode: Standard",
   "FFA": "Free For All",
   "ModeFFA": "Gamemode: FFA",
