--- a/Resources/Lang/hu_HU.json
+++ b/Resources/Lang/hu_HU.json
@@ -534,50 +534,50 @@
   "MorticianInfo": "Tudd meg, ki érintkezett egy testtel utoljára",
   "MediumshiperInfo": "Beszélj a szellemekkel",
   "ObserverInfo": "Látod az összes pajzs-animációt",
-  "DovesOfNeaceInfo": "Szellőzőzz az ölési idő visszaállításához",
-  "MonarchInfo": "Adj extra szavazati erőt a crewmate-eknek!",
+  "DovesOfNeaceInfo": "Használd szellőket az ölési idő visszaállításához",
+  "MonarchInfo": "Adj extra szavazati erőt a legénységi tagoknak!",
   "FarseerInfo": "Fedd fel mások szerepeit",
   "BloodhoundInfo": "Találd meg a testeket és gyilkosaikat",
   "ScoutInfo": "Kövesd a játékosokat",
-  "MerchantInfo": "Adj el extrákat és vesztegess meg gyilkosokat",
-  "RetributionistInfo": "Segíts a crewmate-eknek a halálod után",
+  "MerchantInfo": "Adj el extra szavazatokat és vesztegess meg gyilkosokat",
+  "RetributionistInfo": "Segíts a legénységi tagoknak a halálod után",
   "DeputyInfo": "Bilincselj meg gyilkosokat a cooldownjuk növeléséhez",
   "GuardianInfo": "Teljesítsd a feladataid, hogy halhatatlan legyél",
-  "AddictInfo": "Szellőzőzz, hogy sebezhetetlenné válj, vagy meghalsz",
+  "AddictInfo": "Használd a szellőzőket, hogy sebezhetetlenné válj, vagy meghalsz",
   "TracefinderInfo": "Találd meg a holttesteket",
-  "OracleInfo": "Szavazz egy játékosra, hogy lásd az oldalát",
+  "OracleInfo": "Szavazz egy játékosra, hogy lásd a csapatbeosztását",
   "SpiritualistInfo": "Lásd, hol van egy szellem",
-  "ChameleonInfo": "Szellőzőzz, hogy beolvadj a környezetbe",
-  "ParityCopInfo": "Hasonlítsd össze két játékos igazságát",
+  "ChameleonInfo": "Használd a szellőzőket, hogy beolvadj a környezetbe",
+  "ParityCopInfo": "Hasonlítsd össze két játékos beállítottságát",
   "TimeMasterInfo": "Tekerd vissza az időt támadások elkerüléséhez!",
   "CrusaderInfo": "Öld meg a megtámadott játékos támadóját",
-  "ArsonistInfo": "Locsold le mindenkit és gyújtsd fel őket",
+  "ArsonistInfo": "Locsolj le mindenkit és gyújtsd fel őket",
   "JesterInfo": "Szavaztasd ki magad",
-  "OpportunistInfo": "Éld túl a játék végét",
-  "TerroristInfo": "Fejezd be a feladatod, AZTÁN halj meg",
+  "OpportunistInfo": "Éld túl a játék végéig",
+  "TerroristInfo": "Fejezd be a feladataidat, AZTÁN halj meg",
   "ExecutionerInfo": "Szavaztasd ki a célpontodat",
   "LawyerInfo": "Segíts a célpontodnak nyerni!",
   "MarioInfo": "Beugrani! Kiugrani!",
-  "JackalInfo": "Gyilkolj le mindenkit",
-  "GodInfo": "Minden az irányításod alatt áll",
+  "JackalInfo": "Gyilkolj meg mindenkit",
+  "GodInfo": "Minden a te irányításod alatt áll",
   "InnocentInfo": "Szavaztasd ki azzal, hogy rákényszeríted a gyilkosságot",
   "PelicanInfo": "Egyél meg mindenkit",
   "RevolutionistInfo": "Toborozz játékosokat a győzelemhez",
-  "FFFInfo": "Öld meg a <color=#ff9ace>Szerelmeseket</color> és a <color=#ffab1b>Átállítottakat</color>",
+  "FFFInfo": "Öld meg a <color=#ff9ace>Szerelmeseket</color> és az <color=#ffab1b>Átállítottakat</color>",
   "GamerInfo": "Fogyassz vérmennyiségeket",
   "DarkHideInfo": "A gyilkosságaid áramszünetet okoznak",
   "WorkaholicInfo": "Fejezd be az összes feladatot a győzelemhez!",
   "CollectorInfo": "Gyűjts szavazatokat a játékosoktól",
-  "ProvocateurInfo": "Nyerj, ha a célpontod veszít",
+  "ProvocateurInfo": "Nyersz, ha a célpontod veszít",
   "BloodKnightInfo": "Gyilkosság után ideiglenes pajzsot kapsz",
   "PlagueBearerInfo": "Fertőzz meg mindenkit, hogy <color=#343136>Pestis</color> legyél",
   "PestilenceInfo": "Megállíthatatlan vagy",
   "PoisonerInfo": "A gyilkosságaid késleltetettek",
-  "SidekickInfo": "Segíts a Jackalnak nyerni",
-  "TotocalcioInfo": "Kövesd és segíts egy játékosnak",
+  "SidekickInfo": "Segíts a Sakálnak nyerni",
+  "TotocalcioInfo": "Kövess és segíts egy játékost",
   "SuccubusInfo": "Bűvölj el mindenkit",
-  "HexMasterInfo": "Megátkozd a játékosokat, hogy megbeszéléskor haljanak meg",
-  "WraithInfo": "Szellőzőzz, hogy láthatatlanná válj egy időre",
+  "HexMasterInfo": "Átkozd meg a játékosokat, hogy megbeszéléskor haljanak meg",
+  "WraithInfo": "Használd a szellőzőket, hogy láthatatlanná válj egy időre",
   "NSerialKillerInfo": "Ölj meg mindenkit a győzelemhez!",
   "JuggernautInfo": "A cooldownod csökken minden ölés után",
   "InfectiousInfo": "Fertőzz meg mindenkit",
