--- a/Resources/Lang/hu_HU.json
+++ b/Resources/Lang/hu_HU.json
@@ -533,54 +533,54 @@
   "JudgeInfo": "Csend legyen a tárgyalóteremben!",
   "MorticianInfo": "Tudd meg, ki érintkezett egy testtel utoljára",
   "MediumshiperInfo": "Beszélj a szellemekkel",
-  "ObserverInfo": "You can see all shield-animations",
-  "DovesOfNeaceInfo": "Vent to reset kill cooldowns",
-  "MonarchInfo": "Give your crew extra voting power!",
-  "FarseerInfo": "Reveal roles of other players",
-  "BloodhoundInfo": "Find corpses and their killers",
-  "ScoutInfo": "Track other players",
-  "MerchantInfo": "Sell add-ons and bribe killers",
-  "RetributionistInfo": "Help the crew after you die",
-  "DeputyInfo": "Handcuff killers to increase their cooldowns",
-  "GuardianInfo": "Complete your tasks to become immortal",
-  "AddictInfo": "Vent to become invulnerable, or you'll die",
-  "TracefinderInfo": "Locate dead bodies",
-  "OracleInfo": "Vote a player to see their alignment",
-  "SpiritualistInfo": "You see where a ghost is",
-  "ChameleonInfo": "Vent to disguise into your surroundings",
-  "ParityCopInfo": "Validate the alignments of two players",
-  "TimeMasterInfo": "Rewind time to dodge attacks!",
-  "CrusaderInfo": "Kill a player's attacker",
-  "ArsonistInfo": "Douse everyone and ignite",
-  "JesterInfo": "Get voted out",
-  "OpportunistInfo": "Stay alive until the end",
-  "TerroristInfo": "Finish your tasks, THEN die",
-  "ExecutionerInfo": "Get your target voted out",
-  "LawyerInfo": "Help your target win!",
-  "MarioInfo": "Jump in! Jump out!",
-  "JackalInfo": "Murder everyone",
-  "GodInfo": "Everything is under your control",
-  "InnocentInfo": "Get someone ejected by making them kill you",
-  "PelicanInfo": "Eat all players",
-  "RevolutionistInfo": "Recruit players to win with you",
-  "FFFInfo": "Kill <color=#ff9ace>Lovers</color> and <color=#ffab1b>Converted</color> players",
-  "GamerInfo": "Consume blood volumes",
-  "DarkHideInfo": "Your kills cause power outages",
-  "WorkaholicInfo": "Finish all tasks to solo win!",
-  "CollectorInfo": "Collect votes from players",
-  "ProvocateurInfo": "Win if your target loses",
-  "BloodKnightInfo": "Killing gives you a temporary shield",
-  "PlagueBearerInfo": "Plague everyone to turn into <color=#343136>Pestilence</color>",
-  "PestilenceInfo": "You're unstoppable",
-  "PoisonerInfo": "Your kills are delayed",
-  "SidekickInfo": "Help the Jackal win",
-  "TotocalcioInfo": "Follow a player and help them",
-  "SuccubusInfo": "Charm everyone",
-  "HexMasterInfo": "Hex players to kill them in meetings",
-  "WraithInfo": "Vent to go invisible temporarily",
-  "NSerialKillerInfo": "Kill everyone to win!",
-  "JuggernautInfo": "Your cooldown decreases with each kill you get",
-  "InfectiousInfo": "Infect everyone",
+  "ObserverInfo": "Látod az összes pajzs-animációt",
+  "DovesOfNeaceInfo": "Használd szellőket az ölési idő visszaállításához",
+  "MonarchInfo": "Adj extra szavazati erőt a legénységi tagoknak!",
+  "FarseerInfo": "Fedd fel mások szerepeit",
+  "BloodhoundInfo": "Találd meg a testeket és gyilkosaikat",
+  "ScoutInfo": "Kövesd a játékosokat",
+  "MerchantInfo": "Adj el extra szavazatokat és vesztegess meg gyilkosokat",
+  "RetributionistInfo": "Segíts a legénységi tagoknak a halálod után",
+  "DeputyInfo": "Bilincselj meg gyilkosokat a cooldownjuk növeléséhez",
+  "GuardianInfo": "Teljesítsd a feladataid, hogy halhatatlan legyél",
+  "AddictInfo": "Használd a szellőzőket, hogy sebezhetetlenné válj, vagy meghalsz",
+  "TracefinderInfo": "Találd meg a holttesteket",
+  "OracleInfo": "Szavazz egy játékosra, hogy lásd a csapatbeosztását",
+  "SpiritualistInfo": "Lásd, hol van egy szellem",
+  "ChameleonInfo": "Használd a szellőzőket, hogy beolvadj a környezetbe",
+  "ParityCopInfo": "Hasonlítsd össze két játékos beállítottságát",
+  "TimeMasterInfo": "Tekerd vissza az időt támadások elkerüléséhez!",
+  "CrusaderInfo": "Öld meg a megtámadott játékos támadóját",
+  "ArsonistInfo": "Locsolj le mindenkit és gyújtsd fel őket",
+  "JesterInfo": "Szavaztasd ki magad",
+  "OpportunistInfo": "Éld túl a játék végéig",
+  "TerroristInfo": "Fejezd be a feladataidat, AZTÁN halj meg",
+  "ExecutionerInfo": "Szavaztasd ki a célpontodat",
+  "LawyerInfo": "Segíts a célpontodnak nyerni!",
+  "MarioInfo": "Beugrani! Kiugrani!",
+  "JackalInfo": "Gyilkolj meg mindenkit",
+  "GodInfo": "Minden a te irányításod alatt áll",
+  "InnocentInfo": "Szavaztasd ki azzal, hogy rákényszeríted a gyilkosságot",
+  "PelicanInfo": "Egyél meg mindenkit",
+  "RevolutionistInfo": "Toborozz játékosokat a győzelemhez",
+  "FFFInfo": "Öld meg a <color=#ff9ace>Szerelmeseket</color> és az <color=#ffab1b>Átállítottakat</color>",
+  "GamerInfo": "Fogyassz vérmennyiségeket",
+  "DarkHideInfo": "A gyilkosságaid áramszünetet okoznak",
+  "WorkaholicInfo": "Fejezd be az összes feladatot a győzelemhez!",
+  "CollectorInfo": "Gyűjts szavazatokat a játékosoktól",
+  "ProvocateurInfo": "Nyersz, ha a célpontod veszít",
+  "BloodKnightInfo": "Gyilkosság után ideiglenes pajzsot kapsz",
+  "PlagueBearerInfo": "Fertőzz meg mindenkit, hogy <color=#343136>Pestis</color> legyél",
+  "PestilenceInfo": "Megállíthatatlan vagy",
+  "PoisonerInfo": "A gyilkosságaid késleltetettek",
+  "SidekickInfo": "Segíts a Sakálnak nyerni",
+  "TotocalcioInfo": "Kövess és segíts egy játékost",
+  "SuccubusInfo": "Bűvölj el mindenkit",
+  "HexMasterInfo": "Átkozd meg a játékosokat, hogy megbeszéléskor haljanak meg",
+  "WraithInfo": "Használd a szellőzőket, hogy láthatatlanná válj egy időre",
+  "NSerialKillerInfo": "Ölj meg mindenkit a győzelemhez!",
+  "JuggernautInfo": "A cooldownod csökken minden ölés után",
+  "InfectiousInfo": "Fertőzz meg mindenkit",
   "VirusInfo": "Kill and infect everyone",
   "PursuerInfo": "Protect yourself and live to the end!",
   "PhantasmInfo": "Get killed and finish your tasks to win!",
