--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2382,6 +2382,7 @@
   "CommandDescription.RoleList": "View the limits of how many of each faction and subcategory of roles will spawn.",
   "CommandDescription.JailTalk": "Talk to the Jailor as a jailed player or vice versa.",
   "CommandDescription.GameModeList": "View the list of all game modes in the mod.",
+  "CommandDescription.EightBall": "Ask the magic 8-ball a question.",
   "CommandArgs.ChangeSetting.Name": "The setting's name to change (leave blank to view all settings)",
   "CommandArgs.ChangeSetting.UnknownValue": "(leave blank to view what to put here)",
   "CommandArgs.Rename.Name": "Your new name",
@@ -2452,13 +2453,35 @@
   "CommandArgs.Whisper.Id": "The player's ID to whisper to",
   "CommandArgs.Whisper.Message": "The message to whisper",
   "CommandArgs.JailTalk.Message": "The message to send to the Jailor/jailed player",
+  "CommandArgs.EightBall.Question": "The question to ask",
   "Commands.ChangeSettingHelp": "<b><u>Arguments:</u></b><size=70%>\\n- map (theskeld/mirahq/polus/dlekseht/airship/thefungle/custom)\\n- impostors (number)\\n- players (number)\\n- recommended (on/off)\\n- confirmejects (on/off)\\n- emergencymeetings (number)\\n- anonymousvotes (on/off)\\n- emergencycooldown (number)\\n- discussiontime (number)\\n- votingtime (number)\\n- playerspeed (float)\\n- crewmatevision (float)\\n- impostorvision (float)\\n- killcooldown (float)\\n- killdistance (short/medium/long/custom)\\n- taskbarupdates (always/meetings/never)\\n- visualtasks (on/off)\\n- commontasks (number)\\n- longtasks (number)\\n- shorttasks (number)\\n- scientistcount (number)\\n- scientistchance (number)\\n- vitalsdisplaycooldown (float)\\n- batteryduration (float)\\n- engineercount (number)\\n- engineerchance (number)\\n- ventusecooldown (float)\\n- maxtimeinvents (float)\\n- guardianangelcount (number)\\n- guardianangelchance (number)\\n- protectcooldown (float)\\n- protectduration (float)\\n- protectvisibletoimpostors (on/off)\\n- shapeshiftercount (number)\\n- shapeshifterchance (number)\\n- shapeshiftduration (float)\\n- shapeshiftcooldown (float)\\n- leaveshapeshiftevidence (on/off)\\n- phantomcount (number)\\n- phantomchance (number)\\n- inviscooldown (float)\\n- invisduration (float)\\n- noisemakercount (number)\\n- noisemakerchance (number)\\n- noisemakerimpostoralert (on/off)\\n- noisemakeralertduration (number)\\n- trackercount (number)\\n- trackerchance (number)\\n- trackduration (float)\\n- trackcooldown (float)\\n- trackdelay (float)\\n- ghostdotasks (on/off)\\n\\n<u><b>Notes:</b></u>\\n1. Upper and lowercase matters\\n2. Where it says custom, you obviously put a number argument after it\\n3. A float is a single precision floating number, like 1.7\\n4. \"ghostdotasks\" causes issues if you set it\\n5. Example uses:\\n   - \"/cs map polus\"\\n   - \"/cs killdistance custom 4\"\\n   - \"/cs trackdelay 1,7\"\\n   - \"/cs confirmejects on\"",
+  "8BallResponseTitle": "<#000000>➇ 8-BALL ➇</color>",
+  "8BallResponse.0": "It is certain.",
+  "8BallResponse.1": "It is decidedly so.",
+  "8BallResponse.2": "Without a doubt.",
+  "8BallResponse.3": "Yes - definitely.",
+  "8BallResponse.4": "You may rely on it.",
+  "8BallResponse.5": "As I see it, yes.",
+  "8BallResponse.6": "Most likely.",
+  "8BallResponse.7": "Outlook good.",
+  "8BallResponse.8": "Yes.",
+  "8BallResponse.9": "Signs point to yes.",
+  "8BallResponse.10": "Reply hazy, try again.",
+  "8BallResponse.11": "Ask again later.",
+  "8BallResponse.12": "Better not tell you now.",
+  "8BallResponse.13": "Cannot predict now.",
+  "8BallResponse.14": "Concentrate and ask again.",
+  "8BallResponse.15": "Don't count on it.",
+  "8BallResponse.16": "My reply is no.",
+  "8BallResponse.17": "My sources say no.",
+  "8BallResponse.18": "Outlook not so good.",
+  "8BallResponse.19": "Very doubtful.",
   "PollResultTitle": "Poll Results",
   "Poll.Title": "<#ff0000>➡ POLL ⬅</color>",
   "Poll.Winner": "Winner: <b>{0}. {1}</b> with {2} votes\\n",
   "Poll.Tie": "Tie: {0} each with {1} votes\\n",
   "Poll.Begin": "You may vote using /pv {answer} (A/B/C/D)",
-  "Poll.TimeInfo": "The results will be final in 60 seconds.",
+  "Poll.TimeInfo": "The results will be final in {0} seconds.",
   "Poll.Inactive": "There isn't any active poll currently.",
   "Poll.AlreadyVoted": "You already cast your vote, so it won't be counted.",
   "Poll.VotingInfo": "Use /pv {answer} to vote, answer can be a character or a number.",
