--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -51,7 +51,7 @@
   "ImpostorsCanGuess": "<color=#ff1919>Impostors</color> can guess",
   "NeutralKillersCanGuess": "<color=#ffab1b>Neutral Killers</color> can guess",
   "PassiveNeutralsCanGuess": "Passive <color=#ffab1b>Neutrals</color> can guess",
-  "CovenCanGuess": "<color=#7b3fbb>Coven members</color> can guess",
+  "CovenCanGuess": "<color=#7b3fbb>Coven</color> can guess",
   "CanGuessAddons": "Can Guess Add-ons",
   "CrewCanGuessCrew": "<color=#8cffff>Crewmates</color> Can Guess <color=#8cffff>Crewmate</color> Roles",
   "ImpCanGuessImp": "<color=#ff1919>Impostors</color> Can Guess <color=#ff1919>Impostor</color> Roles",
@@ -1407,6 +1407,7 @@
   "SnitchEnableTargetArrow": "See Arrow Towards Target",
   "SnitchCanGetArrowColor": "See Colored Arrows based on Team Colors",
   "SnitchCanFindNeutralKiller": "Find <color=#ffab1b>Neutral Killers</color>",
+  "SnitchCanFindCoven": "Can Find <color=#7b3fbb>Coven</color>",
   "SnitchCanFindMadmate": "Find <color=#ff1919>Madmates</color>",
   "SnitchRemainingTaskFound": "Remaining tasks to be known",
   "SpeedBoosterUpSpeed": "Increase Speed by",
