--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2031,14 +2031,14 @@
   "SabotageCooldownControl": "Modify Sabotage Cooldown",
   "SabotageCooldown": "Sabotage Cooldown",
   "SabotageTimeControl": "Modify Sabotage Time Limit",
-  "PolusReactorTimeLimit": "Reactor Time Limit on <color=#a167c0>Polus</color>",
-  "SkeldO2TimeLimit": "O2 Time Limit on <color=#66a186>The Skeld</color>",
-  "SkeldReactorTimeLimit": "Reactor Time Limit on <color=#66a186>The Skeld</color>",
-  "MiraO2TimeLimit": "O2 Time Limit on <color=#e84b56>MIRA HQ</color>",
-  "MiraReactorTimeLimit": "Reactor Time Limit on <color=#e84b56>MIRA HQ</color>",
-  "FungleMushroomMixupDuration": "Mushroom Mixup Camouflage Duration",
-  "FungleReactorTimeLimit": "Reactor Time Limit on <color=#ffa646>The Fungle</color>",
-  "AirshipReactorTimeLimit": "Reactor Time Limit on <color=#ed0007>Airship</color>",
+  "SkeldReactorTimeLimit": "<color=#66a186>The Skeld</color> Reactor Time Limit",
+  "SkeldO2TimeLimit": "<color=#66a186>The Skeld</color> O2 Time Limit",
+  "MiraReactorTimeLimit": "<color=#e84b56>MIRA HQ</color> Reactor Time Limit",
+  "MiraO2TimeLimit": "<color=#e84b56>MIRA HQ</color> O2 Time Limit",
+  "PolusReactorTimeLimit": "<color=#a167c0>Polus</color> Reactor Time Limit",
+  "AirshipReactorTimeLimit": "<color=#ed0007>Airship</color> Reactor Time Limit",
+  "FungleReactorTimeLimit": "<color=#ffa646>The Fungle</color> Reactor Time Limit",
+  "FungleMushroomMixupDuration": "<color=#ffa646>The Fungle</color> Mushroom Mixup Duration",
   "CamerasDisabledNotify": "<color=#ffff00>Cameras are globally disabled by the host</color>",
   "CommandList": "★ Command list:",
   "DisableSunnyboy": "Disable <color=#ff9902>Sunnyboy</color>",
@@ -3301,7 +3301,7 @@
   "MadmateCanFindMarshall": "Reveal to <#ff1919>MadMates</color>",
   "CovenCanFindMarshall": "Reveal to <#7b3fbb>Coven</color>",
   "MarshallCanBeGuessedOnTaskCompletion": "Can be Guessed on Task Completion",
-  "DoesntSpawnOnFungle": "Doesn't Spawn When the Map is <color=#ffa646>The Fungle</color>",
+  "DoesntSpawnOnFungle": "Doesn't Spawn When the Map is <color=#ffa646>Fungle</color>",
   "Blackmailer": "Blackmailer",
   "BlackmailerInfo": "Blackmail Players",
   "BlackmailerInfoLong": "(Impostors):\\nAs the Blackmailer, you can blackmail players by clicking your kill button once on them. Blackmailed players' votes will be forced to be the same as your vote. Double click to kill normally.",
