--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1406,9 +1406,9 @@
   "DoctorTaskCompletedBatteryCharge": "Battery Duration",
   "SnitchEnableTargetArrow": "See Arrow Towards Target",
   "SnitchCanGetArrowColor": "See Colored Arrows based on Team Colors",
-  "SnitchCanFindNeutralKiller": "Find <color=#ffab1b>Neutral Killers</color>",
+  "SnitchCanFindNeutralKiller": " Can Find <color=#ffab1b>Neutral Killers</color>",
   "SnitchCanFindCoven": "Can Find <color=#7b3fbb>Coven</color>",
-  "SnitchCanFindMadmate": "Find <color=#ff1919>Madmates</color>",
+  "SnitchCanFindMadmate": "Can Find <color=#ff1919>Madmates</color>",
   "SnitchRemainingTaskFound": "Remaining tasks to be known",
   "SpeedBoosterUpSpeed": "Increase Speed by",
   "SpeedBoosterTimes": "Max Boosts",
