--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3410,13 +3410,13 @@
   "DruidTriggerTriggered": "Trigger {0} was triggered by someone! {1}",
   "FFFMisFireKillTarget": "Misfire Kills Target",
   "FFFChooseConverted": "Can Kill Converted Players",
-  "FFFCanKillMadmate": "Can Kill Madmates",
-  "FFFCanKillCharmed": "Can Kill Charmed Players",
-  "FFFCanKillLovers": "Can Kill Lovers",
-  "FFFCanKillSidekick": "Can Kill Sidekicks",
-  "FFFCanKillEgoist": "Can Kill Egoist",
-  "FFFCanKillContagious": "Can Kill Contagious Players",
-  "FFFCanKillUndead": "Can Kill Undead Players",
+  "FFFCanKillMadmate": "Can Kill <color=#ff1919>Madmates</color>",
+  "FFFCanKillCharmed": "Can Kill <color=#cf6acd>Charmed</color> Players",
+  "FFFCanKillLovers": "Can Kill <color=#ff9ace>Lovers</color>",
+  "FFFCanKillSidekick": "Can Kill <color=#00b4eb>Sidekicks</color>",
+  "FFFCanKillEgoist": "Can Kill <color=#5600ff>Egoist</color>",
+  "FFFCanKillContagious": "Can Kill <color=#2e8b57>Contagious</color> Players",
+  "FFFCanKillUndead": "Can Kill <color=#ed9abd>Undead</color> Players",
   "Mafioso": "Mafioso",
   "MafiosoInfo": "With Each Tier, you're more Powerful",
   "MafiosoInfoLong": "(Impostors):\\nAs the Mafioso, you gain XP by killing, sabotaging, entering a vent you haven't entered that round yet, or by seeing a player not on your team get ejected. When you have 100 XP, your tier levels up. With each tier, you get progressively more powerful:\\n\\nTier 0: Regular impostor, higher kill cooldown, short kill range\\nTier 1: Long kill range, normal kill cooldown\\nTier 2: Lower kill cooldown\\nTier 3: Dual pistols: you have 2 separate higher kill cooldowns, if at least one of them is up, you can kill!\\nTier 4: Normal kill cooldown on both pistols\\nTier 5: Delayed kills",
@@ -5531,6 +5531,7 @@
   "DCanGuessImpostors": "Can Guess <color=#ff1919>Impostors</color>",
   "DCanGuessCrewmates": "Can Guess <color=#8cffff>Crewmates</color>",
   "DCanGuessNeutrals": "Can Guess <color=#ffab1b>Neutrals</color>",
+  "DCanGuessCoven": "Can Guess <color=#7b3fbb>Coven</color>",
   "DCanGuessAdt": "Can Guess Add-Ons",
   "DoomsayerAdvancedSettings": "Advanced Settings",
   "DoomsayerMaxNumberOfGuessesPerMeeting": "Max number of guesses per meeting",
